add_subdirectory(ar-extractor)
add_subdirectory(ar-extractortool)
add_subdirectory(bin2llvmir)
add_subdirectory(bin2llvmirtool)
add_subdirectory(bin2pat)
add_subdirectory(capstone2llvmir)
add_subdirectory(config)
add_subdirectory(configtool)
add_subdirectory(cpdetect)
add_subdirectory(crypto)
add_subdirectory(ctypes)
add_subdirectory(ctypesparser)
add_subdirectory(debugformat)
add_subdirectory(demangler)
add_subdirectory(dwarfparser)
add_subdirectory(fileformat)
add_subdirectory(fileinfo)
add_subdirectory(idr2pat)
add_subdirectory(llvm-support)
add_subdirectory(llvmir2hll)
add_subdirectory(llvmir2hlltool)
add_subdirectory(loader)
add_subdirectory(macho-extractor)
add_subdirectory(macho-extractortool)
add_subdirectory(pat2yara)
add_subdirectory(patterngen)
add_subdirectory(pdbparser)
add_subdirectory(rtti-finder)
add_subdirectory(stacofin)
add_subdirectory(stacofintool)
add_subdirectory(unpacker)
add_subdirectory(unpackertool)
add_subdirectory(utils)
add_subdirectory(getsig)

if(RETDEC_TESTS)
	add_subdirectory(llvmir-emul)
endif()

if(RETDEC_DEV_TOOLS)
	add_subdirectory(capstone2llvmirtool)
	add_subdirectory(demangler_grammar_gen)
	add_subdirectory(demanglertool)
endif()
