add_subdirectory(bin2llvmir)
add_subdirectory(capstone2llvmir)
add_subdirectory(ctypes)
add_subdirectory(ctypesparser)
add_subdirectory(demangler)
add_subdirectory(fileformat)
add_subdirectory(llvm-support)
add_subdirectory(llvmir-emul)
add_subdirectory(llvmir2hll)
add_subdirectory(loader)
add_subdirectory(retdec-config)
add_subdirectory(tl-cpputils)
add_subdirectory(unpacker)
