set(RETDEC_TESTS_DIR "bin")

add_subdirectory(bin2llvmir)
add_subdirectory(capstone2llvmir)
add_subdirectory(config)
add_subdirectory(ctypes)
add_subdirectory(ctypesparser)
add_subdirectory(demangler)
add_subdirectory(fileformat)
add_subdirectory(llvmir-emul)
add_subdirectory(llvmir2hll)
add_subdirectory(loader)
add_subdirectory(unpacker)
add_subdirectory(utils)
